cleaning up names and debugging

--- a/hw2/templates/sign.html
+++ b/hw2/templates/sign.html
@@ -3,11 +3,11 @@
     <h2>Add service to page:</h2>
     <form action="{{ url_for('sign') }}" method=post>
 	<p class="heading">Name: <input type=text name=name>
-	<p class="heading">Service: <input type=text>
-	<p class="heading">Location: <input type=text>
-	<p class="heading">Hours: <input type=text>
-	<p class="heading">Phone: <input type=text>
-        <p class="heading">Review: 
+	<p class="heading">Service: <input type=text name="service">
+	<p class="heading">Location: <input type=text name="location">
+	<p class="heading">Hours: <input type=text name="hours">
+	<p class="heading">Phone: <input type=text name="phone">
+    <p class="heading">Review: 
 	<textarea rows=5 cols=50 name=review></textarea></p>
 	<p><input type=submit value=Submit></p>
     </form>
