--- a/hw2/templates/index.html
+++ b/hw2/templates/index.html
@@ -1,8 +1,8 @@
 {% extends "layout.html" %}
 {% block content %}
-    <h2>Guestbook</h2>
+    <h2>Portland Area Services</h2>
 
-    <h3>Sign <a href="{{ url_for('sign') }}">here</a></h3>
+    <h3> <a href="{{ url_for('sign') }}">Add a service</a></h3>
     <h3>Entries</h3>
     {% for entry in entries %}
         <p class=entry>
