--- a/hw2/static/style.css
+++ b/hw2/static/style.css
@@ -1,5 +1,5 @@
-body       { font-family: "Helvetica", sans-serif; font-size: 20px; color: #008303; }
-a, h1, h2  { color: #00008F; }
+body       { font-family: "Helvetica", sans-serif; font-size: 20px; color: #080a08; }
+a, h1, h2  { color: #0da9c5; }
 form       { margin:.1em auto; padding:.1em; width: 400px; border: 1px }
 .heading  { font-weight: bold; }
 .page      { margin:.1em auto; padding:.1em; width: 504px;  }
