added dockerfile + cleaned up code

--- a/final/templates/homepage.html
+++ b/final/templates/homepage.html
@@ -1,7 +1,7 @@
-<h1>Google Landmark Detection and Mapping</h1>
+<h1>Google Landmark Detection and Wiki Summary</h1>
 
 <p>This Python Flask application uses the Vision API landmark detection to determine
-    the landmark in the photo. Then it queried for a summary using the Wikipedia API
+    the landmark in the photo. Then it queries Wikipedia for a summary using it's API.
 </p>
 
 <br>
